--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 body{
-    background-color: blue;
+    background-color: black;
+    color: white;
+}
+
+.heading{
+    text-align: center;
+}
+
+table{
+    grid-area: auto;
+    grid-auto-columns: auto;
+}
+
+h6{
+    font-size: 15px;
 }
