--- a/site-blocked.css
+++ b/site-blocked.css
@@ -4,3 +4,11 @@ body{
     font-family: Courier, monospace;
     text-align: center;
 }
+
+table{
+    margin: auto;
+}
+
+th{
+    font-size: 2em;
+}
