--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+@font-face{
+    font-family: whitney;
+    src: url(fonts/Whitney-Book.ttf)
+}
+
 body {
     background-color: black;
     color: white;
+    font-family: whitney;
 }
 
 .heading {
@@ -12,6 +18,26 @@ table {
     grid-auto-columns: auto;
 }
 
+h1{
+    text-align: center;
+}
+
 h6 {
     font-size: 15px;
+}
+
+.center{
+    text-align: center;
+}
+
+a{
+    color: inherit;
+}
+
+#install{
+    text-align: center;
+}
+
+ol{
+    list-style-position: inside;
 }
